fixing alignemt

--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -394,7 +394,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-self: center;
         margin-top: 2rem;
         margin-bottom: 2rem;
         height: 22rem;
@@ -663,7 +662,11 @@
         font-size: 1rem;
         padding: 8px 16px;
     }
-
+    .section-2-description{
+        font-size: 1rem;
+        text-align: center;
+        line-height: 1.5rem;
+    }
     .explore-button {
         text-decoration: none;
         color: #FFF7F2;
@@ -675,7 +678,7 @@
         transition: 0.3s;
         align-items: center;
     }
-        .home-section-2 {
+    .home-section-2 {
         width: 100%;
         padding: 0 20px;
     }
